spacing and time issues

--- a/public/css/introHCI.css
+++ b/public/css/introHCI.css
@@ -107,8 +107,8 @@ html, body {
 p.italic {font-style:italic;}
 
 .img {
-    height: 125px;
-    max-width: 255px;*/
+    height: 100px;
+    max-width: 175px;*/
 }
 
 /*.btn-info {
